    force the behavior we want.  (This is probably not necessary given the
    above change, but shouldn't hurt.)

 *) Properly merge configuration settings in mod_webauthldap.  This will
    correct problems with WebAuthLdapAuthrule, WebAuthLdapFilter, and
    WebAuthLdapPort configuration options not being honored inside virtual
    hosts.  Thanks to Wadud Miah for the bug report.

 *) Fix configure logic and Kerberos library analysis on systems with
    multiple versions of Kerberos installed.  Make sure that we're running
    all tests with the right LDFLAGS and CPPFLAGS and set CPPFLAGS
    properly.

 *) Escape -R linker flags from apxs, which doesn't understand them.
    Patch from Robert A. Basch.

 *) AllowOverride is meaningless in a <Location> directive; remove it from
    the WebAuth test configuration.

 *) Change INSTALL to reference --with-kerberos, not --with-krb5, for
    consistency with what configure expects.

WebAuth 3.5.3 (2006-09-12)

 *) Add the connection IP address and, for Weblogin logins, the client IP
    address to the WebKDC to the WebKDC log messages whenever processing
    XML requests.

 *) Document the log messages from the WebKDC in the mod_webkdc manual.

 *) Handle the renaming of ap_run_http_method to ap_run_http_scheme so
    that WebAuth will compile under Apache 2.2.  Thanks to Jim Rodgers for
    the patch.

 *) Turn off debug-level logging in the Weblogin login.fcgi script by
    default.  The REMOTE_USER code now seems to be stable and working
    correctly and the extra verbose logging is not needed.

 *) Remove extraneous newlines from the messages logged by the mod_webauth
    module.

 *) Remove duplicate defininitions from src/modules/webauth/mod_webauth.h.
    Thanks to Robert A. Basch for the patch.

 *) Update libtool, config.guess, and config.sub to the latest Debian
    versions.

 *) Update how xml2rfc is run on make dist, since the latest version can't
    handle partial paths (at least in Debian).
