@@ -19,6 +19,8 @@ WebAuth 3.5.4 (unreleased)
     WebAuthLdapPort configuration options not being honored inside virtual
     hosts.  Thanks to Wadud Miah for the bug report.
 
+ *) Read ticket defaults from krb5.conf properly when built with Heimdal.
+
  *) Fix configure logic and Kerberos library analysis on systems with
     multiple versions of Kerberos installed.
 
